Replace Arrays.asList with List.of (now that we've upgraded the java version)