@@ -4,7 +4,6 @@ import sh.gcj.aoc.Day;
 import org.junit.Test;
 import sh.gcj.aoc.NoSolutionException;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.Assert.*;
@@ -12,7 +11,7 @@ import static org.junit.Assert.*;
 public class Day1Test {
     Day<Integer> day1 = new Day1();
 
-    private final List<Integer> testInput = Arrays.asList(199, 200, 208, 210, 200, 207, 240, 269, 260, 263);
+    private final List<Integer> testInput = List.of(199, 200, 208, 210, 200, 207, 240, 269, 260, 263);
     private final List<Integer> actualInput = day1.parseInput();
 
     @Test public void testPart1() throws NoSolutionException {
